--- a/skin/frontend/meanbee/default/css/_content.scss
+++ b/skin/frontend/meanbee/default/css/_content.scss
@@ -1,12 +1,12 @@
 /* Content Styles ================================================================= */
 .product-name { font-size: 1em; font-weight: normal; margin: 0; 
-    a { color: #1e7ec8; }
+    a {}
 }
 
 /* Product Tags */
 .tags-list { background: #f8f7f5; border: 1px solid #c1c4bc; display: block; font-size: em(13); padding: 10px;
     li { display: inline !important; margin: 0 4px 0 0;
-        a { color: #1b2d3b; }
+        a {}
     }
 }
 
