--- a/skin/frontend/meanbee/default/css/_sidebar.scss
+++ b/skin/frontend/meanbee/default/css/_sidebar.scss
@@ -1,19 +1,19 @@
 /* Sidebar ======================================================================= */
 .block { border: 1px solid #c4c1bc; margin: 0 0 15px;
-    .block-title { background: url(../images/bkg_block-title.gif) repeat-x 0 0; border-bottom: 1px solid #ddd; padding: 2px 9px;
-        strong { display: block; color: #e26703; font: bold em(12)/em(16) Arial, Helvetica, sans-serif; min-height: 16px; padding: 1px 0 1px; text-transform: uppercase;
+    .block-title {
+        strong { display: block; font: bold em(12)/em(16) Arial, Helvetica, sans-serif; min-height: 16px; padding: 1px 0 1px; text-transform: uppercase;
             span {}
         }
         a { text-decoration: none !important; }
     }
-    .block-subtitle { color: #0a263c; font-size: 1em; font-weight: bold; margin: 0; padding: 5px 9px; }
-    .block-content { background: #f8f7f5;
+    .block-subtitle { font-size: 1em; font-weight: bold; margin: 0; padding: 5px 9px; }
+    .block-content {
         li.item { padding: 7px 9px; }
-        .product-name { color: #1e7ec8; }
+        .product-name {}
     }
     .btn-remove,
     .btn-edit { float: right; margin: 1px 0 2px 5px; }
-    .actions { background: #dee5e8 url(../images/bkg_block-actions.gif) 0 0 repeat-x; padding: 6px 9px; text-align: right;
+    .actions { padding: 6px 9px; text-align: right;
         a { float: left; }
         button.button { float: right; }
     }
@@ -44,7 +44,7 @@
 .block-compared .block-title strong,
 .block-related .block-title strong,
 .block-tags .block-title strong,
-.block-login .block-title strong {  background-position: 0 0; background-repeat: no-repeat; padding-left: 21px; }
+.block-login .block-title strong { padding-left: 9px; padding-top: 3px; }
 
 /* Mini Products List */
 .block-cart .mini-products-list .product-details {
@@ -59,23 +59,21 @@
 
 /* Block: Account */
 .block-account { border-color: #bbb;
-    .block-title { background: #fc9d36 url(../images/bkg_block-title-account.gif) repeat-x 0 100%; border: 0; padding: 3px 10px;
-        strong { color: #fff; font-size: em(13); }
+    .block-title { background: #ddd; border: 0; padding: 3px 10px;
+        strong { font-size: em(13); }
     }
-    .block-content { background: #fbfaf6; padding: 7px 10px 7px;
-        li a { border-bottom: 1px solid #ddd; color: #5f5d5c; display: block; padding: 3px 0; text-decoration: none !important;
-            &:hover { color: #ea7900; }
-        }
+    .block-content { padding: 7px 10px 7px;
+        li a { display: block; padding: 3px 0; text-decoration: none !important; }
         li.last a { border-bottom: 0; }
-        li.current { border-bottom: 1px solid #ddd; color: #ea7900; padding: 3px 0; }
-        li.current.last { border-bottom: 0; }
+        li.current { padding: 3px 0; }
+        li.current.last {}
     }
 }
 
 /* Block: Currency Switcher */
-.block-currency { background: url(../images/bkg_block-currency.gif) no-repeat 0 0; border: 0; height: 51px; padding: 7px 12px 10px;
+.block-currency { border: 0; height: 51px; padding: 7px 12px 10px;
     .block-title { background: none; border: 0; margin: 0 0 5px; padding: 0;
-        strong { background: url(../images/i_block-currency.gif) no-repeat 0 50%; color: #fff; font: bold em(13)/em(21) Arial, Helvetica, sans-serif; padding: 0 0 0 21px; text-transform: none; }
+        strong { color: #fff; font: bold em(13)/em(21) Arial, Helvetica, sans-serif; padding: 0 0 0 21px; text-transform: none; }
     }
     .block-content { background: none; padding: 0;
         select { padding: 0; width: 100%; }
@@ -98,7 +96,7 @@
         .btn-remove { margin: 0; position: absolute; right: 4px; top: 9px; }
         .btn-previous { right: 17px; }
     }
-    .actions { background: #cad6e4; border: 1px solid #dee5e8; border-width: 1px 0; font-size: em(11); padding: 4px 5px 4px 9px; text-align: right;
+    .actions { border: 1px solid #dee5e8; border-width: 1px 0; font-size: em(11); padding: 4px 5px 4px 9px; text-align: right;
         a { float: none; }
     }
 }
@@ -106,16 +104,16 @@
 /* Block: Cart */
 .block-cart {
     .block-title {
-        strong { background-image: url(../images/i_block-cart.gif); }
+        strong {}
     }
     .summary { background: #fff; margin: -1px 0 0; padding: 2px 8px 8px; position: relative; z-index: 1; }
     .amount { margin: 0;
         a { font-weight: bold; }
     }
-    .subtotal { background: #fbebd9; margin: 5px 0 0; padding: 2px 0; text-align: center;
+    .subtotal { margin: 5px 0 0; padding: 2px 0;
         .price { font-weight: bold; }
     }
-    .actions { border-bottom: 1px solid #c2c2c2;
+    .actions {
         .paypal-logo { float: left; margin: 3px 0 0; text-align: right; width: 100%;
             .paypal-or { clear: both; display: block; padding: 0 55px 8px 0; }
         }
@@ -124,7 +122,7 @@
 
 /* Block: Wishlist */
 .block-wishlist {
-    .block-title strong { background-image: url(../images/i_block-wishlist.gif); }
+    .block-title strong {}
     .actions { text-align: right;
         a { float: none; }
     }
@@ -132,14 +130,13 @@
 
 /* Block: Related */
 .block-related {
-    .block-title strong { background-image: url(../images/i_block-related.gif); background-position: 0 1px; }
+    .block-title strong {}
     input.checkbox { float: left; }
     .product { margin-left: 20px; }
 }
 
 /* Block: Compare Products */
-.block-compare .block-title strong { background-image: url(../images/i_block-list.gif); background-position: 0 1px; }
-.block-compare button.button span { background: #618499; border-color: #406a83; }
+.block-compare .block-title strong {}
 .page-popup .link-print { background: url(../images/i_print.gif) no-repeat 0 2px; color: #1e7ec8; font-weight: bold; padding: 2px 0 2px 25px; }
 .compare-table { border: 0;
     thead {
@@ -149,7 +146,7 @@
         }
     }
     tbody {
-        th { background: #d9e5ee url(../images/bkg_th-v.gif) repeat-y 100% 0; }
+        th { background: #d9e5ee; }
         th,
         td { border: 0; border-top: 1px solid #ccc; border-left: 1px solid #ccc; padding: 10px; }
         td.last { border-right: 1px solid #ccc; }
@@ -162,7 +159,7 @@
         &.add-to-row td { background: #fffada; text-align: center; }
         &.first td { text-align: center;
             .product-name { color: #203548; font-size: em(13); font-weight: bold; margin: 0 0 5px; }
-            .product-name a { color: #203548; }
+            .product-name a {}
             .ratings { margin: 0 auto; width: 69px; }
         }
         &.first td p,
@@ -172,14 +169,11 @@
 }
 
 /* Block: Recently Viewed */
-.block-viewed .block-title strong { background-image: url(../images/i_block-viewed.gif); }
-
-/* Block: Recently Compared */
-.block-compared .block-title strong { background-image: url(../images/i_block-list.gif); background-position:0 1px; }
+.block-viewed .block-title strong {}
 
 /* Block: Poll */
 .block-poll {
-    .block-title strong { background-image: url(../images/i_block-poll.gif); }
+    .block-title strong {}
     .block-subtitle { font-size: em(12); }
     label { color: #777; font-weight: bold; }
     input.radio { float: left; margin: 1px -18px 0 0; }
@@ -193,10 +187,8 @@
 
 /* Block: Tags */
 .block-tags {
-    .block-title strong { background-image: url(../images/i_block-tags.gif); }
     .block-content {
         .tags-list { background: none; border: 0; font-size: em(12); }
-        a { color: #1b2d3b; }
     }
     .actions { text-align: right;
         a { float: none; }
@@ -206,18 +198,17 @@
 /* Block: Subscribe */
 .block-subscribe {
     .block-content { padding: 5px 10px; }
-    .block-title strong { background-image: url(../images/i_block-subscribe.gif); }
+    .block-title strong {}
     label { color: #666; font-weight: bold; }
     input.input-text { display: block; margin: 3px 0; width: 167px; }
     .actions { background: none; margin: 3px 0 0; padding: 0; text-align: left;
         button.button { float: none; }
-        button.button span { background: #618499; border-color: #406a83; }
     }
 }
 
 /* Block: Reorder */
 .block-reorder {
-    .block-title strong { background-image: url(../images/i_block-list.gif); }
+    .block-title strong {}
     input.checkbox { float: left; margin: 2px -20px 0 0; }
     .product-name { margin-left: 20px; }
     .validation-advice { margin: 3px 9px 7px; }
@@ -230,7 +221,7 @@
 
 /* Block: Login */
 .block-login {
-    .block-title strong { background-image: url(../images/i_ma-info.gif); }
+    .block-title strong {}
     .block-content { padding: 5px 10px; }
     label { color: #666; font-weight: bold; }
     input.input-text { display: block; margin: 3px 0; width: 167px; }
