--- a/skin/frontend/meanbee/default/css/_content.scss
+++ b/skin/frontend/meanbee/default/css/_content.scss
@@ -4,7 +4,7 @@
 }
 
 /* Product Tags */
-.tags-list { background: #f8f7f5; border: 1px solid #c1c4bc; display: block; font-size: em(13); padding: 10px;
+.tags-list { display: block; font-size: em(13); padding: 10px;
     li { display: inline !important; margin: 0 4px 0 0;
         a {}
     }
