Removed magento default styles from the remember me popup window

--- a/skin/frontend/meanbee/default/css/_account.scss
+++ b/skin/frontend/meanbee/default/css/_account.scss
@@ -2,10 +2,10 @@
 .account-login {
     .new-users h2 {}
     .registered-users h2 {}
-    .buttons-set { margin: 0; padding: 8px 13px;
-        button.button { float: left; }
+    .buttons-set { margin: 0; padding: 8px 13px 8px 0;
+        button.button { float: left; margin-left: 0; }
     }
-    .content { padding: 14px 21px;
+    .content { padding: 14px 21px 14px 0;
         h2 { background-position: 0 1px; background-repeat: no-repeat; font-size: em(13); font-weight: bold; margin: 0 0 14px; padding: 0 0 5px 0; text-transform: uppercase; }
     }
 }
@@ -51,16 +51,16 @@
 }
 
 /* Remember Me Popup ===================================================================== */
-.window-overlay { background: url(../images/window_overlay.png) repeat; background: rgba(0, 0, 0, 0.35); height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 990; }
+.window-overlay { background: rgba(0, 0, 0, 0.35); height: 100%; left: 0; position: absolute; top: 0; width: 100%; z-index: 990; }
 
 .remember-me label { float: none; margin: 0 6px; }
 .remember-me-popup { background: #fff; border: 1px solid #ccc; @include boxShadow(0, 0, 6px, #ccc); left: 50%; margin: -85px 0 0 -200px; position: absolute; text-align: left; top: 50%; width: 400px; z-index: 1000;
-    h3 { background: #d9e5ee; border-bottom: 1px solid #ccc; font-size: em(14); padding: 5px 10px; }
+    h3 { font-size: em(14); padding: 5px 10px; }
     .remember-me-popup-head { position: relative;
         .remember-me-popup-close { background: url(../images/btn_window_close.gif) no-repeat; display: block; height: 15px; position: absolute; right: 7px; text-indent: -9999em; top: 7px; width: 15px; }
     }
     .remember-me-popup-body { padding: 10px;
-        a { background: #f18200; border: 1px solid #de5400; color: #fff; display: inline-block; font: bold em(12)/em(19) Arial, Helvetica, sans-serif; height: 19px; padding: 0 8px; text-align: center; text-decoration: none; white-space: nowrap; }
+        a { display: inline-block; font: bold em(12)/em(19) Arial, Helvetica, sans-serif; height: 19px; padding: 0 8px; text-align: center; text-decoration: none; white-space: nowrap; }
     }
 }
 /* Remember Me Popup ===================================================================== */
